--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12515,6 +12515,9 @@ ul.bb-albums-list .bb-more-photos strong {
     height: 60vh;
     max-height: 60vh;
   }
+  #buddypress .bb-document-theater .bb-media-section .img-section {
+    height: 60vh;
+  }
   #buddypress .bb-document-theater .bb-media-section.bb-media-no-preview .img-section > p {
     font-size: 16px;
     padding: 0 10px;
@@ -13197,6 +13200,11 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   overflow: initial;
 }
 
+.document.document-theatre:hover a.theater-command {
+  opacity: 1;
+  visibility: visible;
+}
+
 .bb-document-theater {
   max-width: 1750px;
   width: 90%;
@@ -13205,11 +13213,6 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 
 .bb-document-theater .bb-media-model-inner {
   overflow: visible;
-}
-
-.bb-document-theater .bb-media-model-inner:hover .theater-command {
-  opacity: 1;
-  visibility: visible;
 }
 
 .bb-document-theater .bb-media-section {
@@ -13280,6 +13283,19 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   width: 100%;
 }
 
+.bb-document-theater .bb-media-section .document-audio {
+  display: flex;
+  height: 100%;
+  padding: 0 15px;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+}
+
+.bb-document-theater .bb-media-section .document-audio audio {
+  outline: 0;
+}
+
 .bb-document-theater .bb-media-section h3 {
   background-color: #fff;
   display: block;
@@ -13288,7 +13304,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   top: 0;
   left: 0;
   padding: 6px 0;
-  right: 376px;
+  right: 377px;
   text-align: center;
   border-bottom: 1px solid #ecedee;
   font-size: 16px;
@@ -13364,7 +13380,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: calc(60% - 100px);
+  width: calc(60% - 98px);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-flow: column;
