#266 - document download box background color in comment

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -918,6 +918,8 @@ span.dashicons.dashicons-admin-file:before {
 			-ms-flex-direction: row;
 			flex-direction: row;
 			padding: 5px 15px;
+			background-color: #fff;
+			border-radius: 5px;
 
 			.entry-img {
 				-ms-flex-preferred-size: 30px;
