--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -807,19 +807,77 @@ input.search-query-input {
 	}
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 603px) {
 
 	#buddypress > .activity-update-form .focus-in {
 
 		#whats-new-content {
 
 			.medium-editor-toolbar {
-				bottom: 109px;
+				bottom: 110px;
 
 				&.active {
 
 					div & {
-						bottom: 109px;
+						bottom: 110px;
+					}
+				}
+			}
+
+		}
+
+	}
+}
+
+@media screen and (max-width: 560px) {
+
+	#buddypress .activity-update-form .focus-in {
+
+		#whats-new-content {
+
+			.medium-editor-toolbar {
+				bottom: 110px;
+
+				&.active {
+
+					div & {
+						bottom: 110px;
+					}
+				}
+			}
+
+		}
+	}
+
+	.bp_group #buddypress .activity-update-form .focus-in {
+
+		#whats-new-content {
+
+			.medium-editor-toolbar {
+				bottom: 56px;
+
+				&.active {
+
+					div & {
+						bottom: 56px;
+					}
+				}
+			}
+
+		}
+	}
+
+	#buddypress > .activity-update-form .focus-in {
+
+		#whats-new-content {
+
+			.medium-editor-toolbar {
+				bottom: 144px;
+
+				&.active {
+
+					div & {
+						bottom: 144px;
 					}
 				}
 			}
