--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1110,10 +1110,7 @@ ul.bb-albums-list {
 
 		.bb-media-model-inner {
 			height: 100%;
-			flex-direction: column;
-			-webkit-box-orient: vertical;
-			-webkit-box-direction: normal;
-			flex-flow: column;/* stylelint-disable-line */
+			display: block;
 
 			.bb-media-info-section.document {
 				-webkit-box-flex: 0;
@@ -1130,11 +1127,17 @@ ul.bb-albums-list {
 
 		.bb-media-section {
 			width: 100%;
-			height: 60vh;
+			height: auto;
+			min-height: 260px;
 			max-height: 60vh;
+			background-color: #fff;
 
 			.img-section {
-				height: 60vh;
+				max-height: 60vh;
+				height: auto;
+				display: block;
+				text-align: center;
+				padding: 5px 0;
 			}
 
 			&.bb-media-no-preview .img-section > p {
