#266 - Fixed documents table header smaller screen issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1750,7 +1750,8 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 		.data-head-name,
 		.data-head-modified,
-		.data-head-visibility {
+		.data-head-visibility,
+		.data-head-origin {
 			padding-right: 7px;
 			font-size: 10px;
 
