#266 - fixed document theater audio file preview for smaller screens

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1131,6 +1131,9 @@ ul.bb-albums-list {
 			min-height: 260px;
 			max-height: 60vh;
 			background-color: #fff;
+			-webkit-box-align: center;
+			-ms-flex-align: center;
+			align-items: center;
 
 			.img-section {
 				max-height: 60vh;
