--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -5944,12 +5944,14 @@ input#send-to-input {
   height: calc(69vh + 130px);
 }
 
+.bp-messages-content-wrapper #messages-post-document-uploader.open,
 .bp-messages-content-wrapper #messages-post-media-uploader.open {
   height: calc(100% - 145px);
   left: 0;
   margin: 0;
 }
 
+.bp-messages-content-wrapper #messages-post-document-uploader.open,
 .bp-messages-content-wrapper #messages-post-media-uploader.open {
   position: absolute;
   top: 0;
