--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13696,13 +13696,9 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   border-bottom: 1px solid #e7e9ec;
 }
 
-#media-stream.document-parent.group-column > #bp-ajax-loader {
-  margin: 20px;
-}
-
 #media-stream.document-parent.group-column .document-data-table-head .data-head-name {
-  -ms-flex-preferred-size: calc(60% - 50px);
-  flex-basis: calc(60% - 50px);
+  -ms-flex-preferred-size: calc(40% - 50px);
+  flex-basis: calc(40% - 50px);
 }
 
 #media-stream.document-parent.group-column .document-data-table-head .data-head-origin {
@@ -13711,7 +13707,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 }
 
 #media-stream.document-parent.group-column #media-folder-document-data-table .media-folder_items .media-folder_details {
-  width: calc(60% - 100px);
+  width: calc(40% - 100px);
 }
 
 #media-stream.document-parent.group-column #media-folder-document-data-table .media-folder_items .media-folder_group {
@@ -14675,16 +14671,16 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   margin-top: 20px;
 }
 
-#media-stream.document-parent .bp-feedback {
-  margin: 20px;
-}
-
 #media-stream.document-parent .document-data-table-head {
   padding: 10px 20px 8px;
 }
 
 #media-stream.document-parent #media-folder-document-data-table .media-folder_items {
   margin: 0 20px;
+}
+
+#media-stream.document-parent > #bp-ajax-loader {
+  margin: 20px;
 }
 
 /* BASICS */
