--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -887,7 +887,7 @@ span.dashicons.dashicons-admin-file:before {
 		border-radius: 5px;
 		display: inline-block;
 		width: 100%;
-		margin: 3px;
+		margin: 3px 0;
 		position: relative;
 		padding: 0;
 
