--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1892,6 +1892,11 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 				> p {
 					font-size: 18px;
+					max-width: 100%;
+					overflow: hidden;
+					white-space: nowrap;
+					text-overflow: ellipsis;
+					padding: 5px;
 				}
 
 			}
