#266 - Fixed document more option dropdown issue for smaller screens

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -1436,6 +1436,10 @@ span.dashicons.dashicons-admin-file:before {
 			.document-detail-wrap {
 				padding-left: 10px;
 
+				.document-title {
+					font-size: 14px;
+				}
+
 				.document-helper-text {
 					height: 0;
 					width: 0;
