#266 - added new file icons

--- a/src/bp-templates/bp-nouveau/icons/bb-icons.css
+++ b/src/bp-templates/bp-nouveau/icons/bb-icons.css
@@ -434,6 +434,37 @@
 .bb-icon-paragraph-bullet:before { content: '\e9a3'; }
 .bb-icon-paragraph-numbers:before { content: '\e9a4'; }
 .bb-icon-quotes:before { content: '\e9a5'; }
+.bb-icon-file-7z:before { content: '\e9a6'; }
+.bb-icon-file-hlsm:before { content: '\e9a7'; }
+.bb-icon-file-htm:before { content: '\e9a8'; }
+.bb-icon-file-html:before { content: '\e9a9'; }
+.bb-icon-file-ipa:before { content: '\e9aa'; }
+.bb-icon-file-jpg:before { content: '\e9ab'; }
+.bb-icon-file-js:before { content: '\e9ac'; }
+.bb-icon-file-rss:before { content: '\e9ad'; }
+.bb-icon-file-sketch:before { content: '\e9ae'; }
+.bb-icon-file-svg:before { content: '\e9af'; }
+.bb-icon-file-vcf:before { content: '\e9b0'; }
+.bb-icon-file-wav:before { content: '\e9b1'; }
+.bb-icon-file-xlsx:before { content: '\e9b2'; }
+.bb-icon-file-xltm:before { content: '\e9b3'; }
+.bb-icon-file-xltx:before { content: '\e9b4'; }
+.bb-icon-file-yaml:before { content: '\e9b5'; }
+.bb-icon-file-zip:before { content: '\e9b6'; }
+.bb-icon-file-abw:before { content: '\e9b7'; }
+.bb-icon-file-ace:before { content: '\e9b8'; }
+.bb-icon-file-ai:before { content: '\e9b9'; }
+.bb-icon-file-apk:before { content: '\e9ba'; }
+.bb-icon-file-css:before { content: '\e9bb'; }
+.bb-icon-file-doc:before { content: '\e9bc'; }
+.bb-icon-file-docm:before { content: '\e9bd'; }
+.bb-icon-file-docx:before { content: '\e9be'; }
+.bb-icon-file-dotm:before { content: '\e9bf'; }
+.bb-icon-file-dotx:before { content: '\e9c0'; }
+.bb-icon-file-gif:before { content: '\e9c1'; }
+.bb-icon-file-gzip:before { content: '\e9c2'; }
+.bb-icon-file-hlam:before { content: '\e9c3'; }
+.bb-icon-file-hlsb:before { content: '\e9c4'; }
 .bb-icon-trash-small:before { content: '\eaea'; }
 .bb-icon-rounded-instagram:before { content: '\eaec'; }
 .bb-icon-rounded-facebook:before { content: '\eaed'; }
