--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -3073,6 +3073,10 @@ body.document  #bp-media-single-folder  .album-single-view .bp-media-header-wrap
 	.ac_document_search_folder_list,
 	.location-folder-list-wrap {
 
+		h4 {
+			margin: 0 !important;
+		}
+
 		&.has-error {
 			border-color: #f00;
 		}
