#266 - Fixed: Document preview hovering issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -897,6 +897,11 @@ span.dashicons.dashicons-admin-file:before {
 			.document-audio-wrap audio::-webkit-media-controls-panel {
 				background-color: #fff;
 			}
+
+			.document-description-wrap {
+				background-color: transparent;
+			}
+
 		}
 
 		.document-text:not(.loaded):after {
