#266 - Fixed document theater title alignment issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1938,7 +1938,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			top: 0;
 			left: 0;
 			padding: 6px 0;
-			right: 0;
+			right: 375px;
 			text-align: center;
 			border-bottom: 1px solid #ecedee;
 			font-size: 16px;
