--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2757,6 +2757,10 @@ span.dashicons.dashicons-admin-file:before {
   border-left-width: 0;
 }
 
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap > a:hover {
+  color: #461212;
+}
+
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-action-wrap > a:hover i {
   color: #461212;
 }
@@ -13377,7 +13381,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   top: 0;
   left: 0;
   padding: 6px 0;
-  right: 0;
+  right: 375px;
   text-align: center;
   border-bottom: 1px solid #ecedee;
   font-size: 16px;
