#266 - Fixed Move file/folder popup smaller screen issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2998,6 +2998,17 @@ body.document  #bp-media-single-folder  .album-single-view .bp-media-header-wrap
 		font-weight: 500;
 		margin: 0;
 	}
+
+	@media screen and ( max-width: 520px ) {
+
+		.bb-model-footer a.bp-document-open-create-popup-folder {
+			display: block;
+			float: none;
+			margin: 0 0 15px 0;
+			text-align: left;
+		}
+
+	}
 }
 
 .bp-media-document-uploader .bb-model-header > p {
