--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -14318,6 +14318,16 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   margin: 0;
 }
 
+@media screen and (max-width: 520px) {
+  .bp-media-move-file .bb-model-footer a.bp-document-open-create-popup-folder,
+  .bp-media-move-folder .bb-model-footer a.bp-document-open-create-popup-folder {
+    display: block;
+    float: none;
+    margin: 0 0 15px 0;
+    text-align: right;
+  }
+}
+
 .bp-media-document-uploader .bb-model-header > p {
   font-weight: 500;
   margin: 0;
