--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13416,6 +13416,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   font-size: 20px;
 }
 
+.search-document-list .media-folder_items,
 #media-folder-document-data-table .media-folder_items {
   margin: 0;
   border-bottom: 1px solid #e7e9ec;
@@ -13428,39 +13429,48 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   align-items: center;
 }
 
+.search-document-list .media-folder_items:last-child,
 #media-folder-document-data-table .media-folder_items:last-child {
   border-bottom: 0;
 }
 
+.search-document-list .media-folder_items.is-visible,
 #media-folder-document-data-table .media-folder_items.is-visible {
   z-index: 1;
 }
 
+.search-document-list .media-folder_items.is-visible .media-folder_actions .media-folder_action__list,
 #media-folder-document-data-table .media-folder_items.is-visible .media-folder_actions .media-folder_action__list {
   display: block;
   z-index: 112;
 }
 
+.search-document-list .media-folder_items .media-folder_icon,
 #media-folder-document-data-table .media-folder_items .media-folder_icon {
   width: 52px;
   padding-left: 10px;
 }
 
+.search-document-list .media-folder_items .media-folder_icon > a i,
 #media-folder-document-data-table .media-folder_items .media-folder_icon > a i {
   font-size: 30px;
   color: #9ca8b4;
   margin-top: 5px;
 }
 
+.search-document-list .media-folder_items .media-folder_icon > a i.bb-icon-folder-stacked,
 #media-folder-document-data-table .media-folder_items .media-folder_icon > a i.bb-icon-folder-stacked {
   font-size: 23px;
 }
 
+.search-document-list .media-folder_items .media-folder_visibility,
+.search-document-list .media-folder_items .media-folder_modified,
 #media-folder-document-data-table .media-folder_items .media-folder_visibility,
 #media-folder-document-data-table .media-folder_items .media-folder_modified {
   width: 20%;
 }
 
+.search-document-list .media-folder_items .media-folder_details,
 #media-folder-document-data-table .media-folder_items .media-folder_details {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13472,6 +13482,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   flex-flow: column;
 }
 
+.search-document-list .media-folder_items .media-folder_details .media-folder_name,
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name {
   color: #122b46;
   overflow: hidden;
@@ -13479,6 +13490,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   white-space: nowrap;
 }
 
+.search-document-list .media-folder_items .media-folder_details .media-folder_name > span,
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name > span {
   max-width: calc(80% - 30px);
   white-space: nowrap;
@@ -13488,36 +13500,43 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   float: left;
 }
 
+.search-document-list .media-folder_items .media-folder_details .media-folder_name_edit_wrap,
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit_wrap {
   display: none;
   padding-right: 5px;
   position: relative;
 }
 
+.search-document-list .media-folder_items .media-folder_details .media-folder_name_edit_wrap.submitting,
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit_wrap.submitting {
   padding-right: 30px;
 }
 
+.search-document-list .media-folder_items .media-folder_details .media-folder_name_edit_wrap.submitting .bb-icon-loader,
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit_wrap.submitting .bb-icon-loader {
   position: absolute;
   right: 15px;
   top: 9px;
 }
 
+.search-document-list .media-folder_items .media-folder_details .media-folder_name_edit_wrap > a,
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit_wrap > a {
   margin: 5px 0;
 }
 
+.search-document-list .media-folder_items .media-folder_details .media-folder_name_edit_wrap .error-box,
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit_wrap .error-box {
   display: none;
 }
 
+.search-document-list .media-folder_items .media-folder_details .media-folder_name_edit,
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit {
   height: 32px;
   width: 90%;
   margin: 0 8px 0 0;
 }
 
+.search-document-list .media-folder_items .media-folder_details .media-folder_name_edit.error + .error-box,
 #media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name_edit.error + .error-box {
   display: block;
   line-height: 1.3;
@@ -13525,6 +13544,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   color: #f00;
 }
 
+.search-document-list .media-folder_items .media-folder_details__bottom,
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom {
   display: block;
   font-size: 14px;
@@ -13532,25 +13552,30 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   color: #4d5c6d;
 }
 
+.search-document-list .media-folder_items .media-folder_details__bottom .media-folder_date,
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_date {
   display: inline-block;
   vertical-align: middle;
 }
 
+.search-document-list .media-folder_items .media-folder_details__bottom .media-folder_author,
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_author {
   display: block;
   font-size: 13px;
   color: #939597;
 }
 
+.search-document-list .media-folder_items .media-folder_details__bottom .media-folder_author a,
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_author a {
   color: #939597;
 }
 
+.search-document-list .media-folder_items .media-folder_details__bottom .hide,
 #media-folder-document-data-table .media-folder_items .media-folder_details__bottom .hide {
   display: none;
 }
 
+.search-document-list .media-folder_items .media-folder_actions,
 #media-folder-document-data-table .media-folder_items .media-folder_actions {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13565,11 +13590,13 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   position: relative;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__anchor i,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__anchor i {
   font-size: 21px;
   color: #939597;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list {
   position: absolute;
   top: 30px;
@@ -13581,6 +13608,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   display: none;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list:after,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list:after {
   content: " ";
   position: absolute;
@@ -13604,12 +13632,14 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   visibility: visible;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul {
   list-style: none;
   margin: 5px 0;
   padding: 0;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul li a,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li a {
   padding: 10px 14px;
   display: block;
@@ -13618,11 +13648,13 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   color: #7f868f;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul li a:hover,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li a:hover {
   background-color: #f5f5f5;
   color: #5087e5;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul li a:before,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li a:before {
   font-family: 'bb-icons';
   /* stylelint-disable-line */
@@ -13633,34 +13665,41 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   text-align: center;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul li.rename_file a:before,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li.rename_file a:before {
   content: "\e80c";
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul li.move_file a:before,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li.move_file a:before {
   content: "\e959";
   font-size: 13px;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul li.delete_file a:before,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li.delete_file a:before {
   content: "\e937";
   font-size: 15px;
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul li.download_file a:before,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li.download_file a:before {
   content: "\e890";
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul li.copy_download_file_url a:before,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li.copy_download_file_url a:before {
   content: "\e8ac";
 }
 
+.search-document-list .media-folder_items .media-folder_actions .media-folder_action__list ul li.privacy_file a:before,
 #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li.privacy_file a:before {
   content: "\e90d";
   font-size: 15px;
 }
 
 @media screen and (max-width: 540px) {
+  .search-document-list .media-folder_items,
   #media-folder-document-data-table .media-folder_items {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -13671,14 +13710,19 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
     align-items: flex-start;
     position: relative;
   }
+  .search-document-list .media-folder_items .media-folder_icon,
   #media-folder-document-data-table .media-folder_items .media-folder_icon {
     flex-basis: auto;
     padding-left: 0;
     margin-bottom: 5px;
   }
+  .search-document-list .media-folder_items .media-folder_icon img,
   #media-folder-document-data-table .media-folder_items .media-folder_icon img {
     width: 100%;
   }
+  .search-document-list .media-folder_items .media-folder_visibility,
+  .search-document-list .media-folder_items .media-folder_details,
+  .search-document-list .media-folder_items .media-folder_group,
   #media-folder-document-data-table .media-folder_items .media-folder_visibility,
   #media-folder-document-data-table .media-folder_items .media-folder_details,
   #media-folder-document-data-table .media-folder_items .media-folder_group {
@@ -13686,29 +13730,35 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
     flex-basis: 100% !important;
     width: 100% !important;
   }
+  .search-document-list .media-folder_items .media-folder_modified,
   #media-folder-document-data-table .media-folder_items .media-folder_modified {
     margin-bottom: 5px;
     width: 100%;
   }
+  .search-document-list .media-folder_items .media-folder_actions,
   #media-folder-document-data-table .media-folder_items .media-folder_actions {
     position: absolute;
     right: 0;
     top: 19px;
   }
+  .search-document-list .media-folder_items .media-folder_actions .media-folder_action__list,
   #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list {
     right: 14px;
   }
+  .search-document-list .media-folder_items .media-folder_actions .media-folder_action__list:after,
   #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list:after {
     left: inherit;
     right: 9px;
   }
 }
 
+.search-document-list .media-folder_items:last-child .media-folder_action__list,
 #media-folder-document-data-table .media-folder_items:last-child .media-folder_action__list {
   top: initial;
   bottom: 33px;
 }
 
+.search-document-list .media-folder_items:last-child .media-folder_action__list:after,
 #media-folder-document-data-table .media-folder_items:last-child .media-folder_action__list:after {
   top: inherit;
   bottom: -12px;
@@ -13719,10 +13769,32 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 }
 
 @media screen and (max-width: 540px) {
+  .search-document-list .media-folder_items:last-child .media-folder_action__list,
   #media-folder-document-data-table .media-folder_items:last-child .media-folder_action__list {
     bottom: 30px;
     right: -1px;
   }
+}
+
+.search-document-list .item {
+  width: 100%;
+}
+
+.search-document-list .media-folder_items {
+  width: 100%;
+  padding: 0;
+}
+
+.search-document-list .media-folder_items .media-folder_details {
+  width: calc(60% - 40px);
+}
+
+.search-document-list .media-folder_items.ac-folder-list .media-folder_details {
+  width: calc(40% - 100px);
+}
+
+.search-document-list .media-folder_items.ac-folder-list .media-folder_group {
+  width: 20%;
 }
 
 .document-type-navs.main-navs {
