--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -14353,6 +14353,11 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   opacity: 0.5;
 }
 
+.bp-media-move-file.move-folder-popup-group .location-folder-list-wrap-main .location-folder-list-wrap .breadcrumbs-append-ul-li .breadcrumb .item,
+.bp-media-move-folder.move-folder-popup-group .location-folder-list-wrap-main .location-folder-list-wrap .breadcrumbs-append-ul-li .breadcrumb .item {
+  padding: 2px 0 22px;
+}
+
 .bp-media-move-file .bb-model-footer,
 .bp-media-move-folder .bb-model-footer {
   display: inline-block;
