#266 - Fixed group name font style in move popup

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -3120,6 +3120,8 @@ body.document  #bp-media-single-folder  .album-single-view .bp-media-header-wrap
 
 		h4 {
 			margin: 0 !important;
+			font-size: 17px;
+			font-weight: 500;
 		}
 
 		&.has-error {
