--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1899,6 +1899,29 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 					padding: 5px;
 				}
 
+				a.download-button {
+					padding: 10px 14px;
+					display: block;
+					font-size: 17px;
+					line-height: 1;
+					color: #7f868f;
+
+					> i {
+						padding-right: 8px;
+						font-size: 17px;
+						display: inline-block;
+						margin-right: 10px;
+						width: 20px;
+						text-align: center;
+					}
+
+					&:hover {
+						background-color: #f5f5f5;
+						color: $blue;
+					}
+
+				}
+
 			}
 		}
 
