--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -1291,6 +1291,16 @@ span.dashicons.dashicons-admin-file:before {
 			margin: 0 15px 15px;
 			border: 1px solid #e7e9ec;
 			border-radius: 4px;
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+			-webkit-box-align: center;
+			-ms-flex-align: center;
+			align-items: center;
+			-webkit-box-pack: center;
+			-ms-flex-pack: center;
+			justify-content: center;
+			text-align: center;
 		}
 
 		.document-text-wrap {
